--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,15 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: My Resume
-url: 'http://webjeda.com'
-baseurl: '/online-cv' #change it according to your repository name
+remote_theme : mmistakes/minimal-mistakes
+title: Ji Hwan Moon
+#url: 'http://webjeda.com'
+#baseurl: '/online-cv' #change it according to your repository name
+url: 'https://jihmoon.github.io'
+baseurl: '' #change it according to your repository name
 description: A beautiful Jekyll theme for creating resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
-theme_skin: blue # blue turquoise green berry orange ceramic
+theme_skin: Ceramic # blue turquoise green berry orange ceramic
 chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
 # Tracker
