--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-remote_theme : mmistakes/minimal-mistakes
+#remote_theme : mmistakes/minimal-mistakes
 title: Ji Hwan Moon
-#url: 'http://webjeda.com'
-#baseurl: '/online-cv' #change it according to your repository name
-url: 'https://jihmoon.github.io'
-baseurl: '' #change it according to your repository name
+url: 'http://webjeda.com'
+baseurl: '/online-cv' #change it according to your repository name
+#url: 'https://jihmoon.github.io'
+#baseurl: '' #change it according to your repository name
 description: A beautiful Jekyll theme for creating resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: ceramic # blue turquoise green berry orange ceramic
